adjusted image resolutions

--- a/nav/emy-sainbayar.html
+++ b/nav/emy-sainbayar.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="image-text-container-emy">
-                <img src="../img/emy-sainbayar.png" alt="emy SAINBAYAR headshot" width="auto", height="500vh" srcset="../img/emy-sainbayar_1x.png"/>
+                <img src="../img/emy-sainbayar.png" alt="emy SAINBAYAR headshot" width="auto", height="500vh" srcset="../img/emy-sainbayar-2x.png"/>
                 <div class="text-container">
                 <h2 class="text-heading">emy sainbayar</h2>
                 <p class="text-content">
