--- a/projects/college-collage.html
+++ b/projects/college-collage.html
@@ -36,10 +36,13 @@
             </div>
 
             <div class="cc-images">
-                <img src="../img/trends.PNG" alt="trends by annie church" width="80%" height="auto" srcset="../img/trends_1x.PNG"/>
-                <img src="../img/nightlife.png" alt="nightlife by annie church" width="80%" height="auto" srcset="../img/nightlife_1x.png"/>
-                <img src="../img/back.jpg" alt="back by annie church" width="80%" height="auto" srcset="../img/back_1x.jpg"/>
-                <img src="../img/tattoo tour.png" alt="tattoo tour by annie church" width="80%" height="auto" srcset="../img/tattoo tour_1x.png"/>
+                <img src="../img/trends_1x.png" 
+                alt="trends by annie church" 
+                width="80%" height="auto" 
+                srcset="../img/trends_2x.png 2x"/>
+                <img src="../img/nightlife_1x.png" alt="nightlife by annie church" width="80%" height="auto" srcset="../img/nightlife_2x.png 2x"/>
+                <img src="../img/back_1x.png" alt="back by annie church" width="80%" height="auto" srcset="../img/back_2x.png 2x"/>
+                <img src="../img/tattoo_1x.png" alt="tattoo tour by annie church" width="80%" height="auto" srcset="../img/tattoo_2x.png 2x"/>
             </div>
         </main>
 
