updated favicon relative links and made transition slower for home img

--- a/nav/emy-sainbayar.html
+++ b/nav/emy-sainbayar.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>emy sainbayar</title>
-        <link rel="icon" type="image/x-icon" href="img/favicon.png">
+        <link rel="icon" type="image/x-icon" href="../img/favicon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;600&family=Libre+Barcode+128+Text&family=Noto+Serif+JP:wght@200&family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
