updated college//collage location from NYC to SH

--- a/projects/college-collage.html
+++ b/projects/college-collage.html
@@ -26,7 +26,7 @@
                 <a href="../index.html">
                     <h1 class="logo">imogen & mercer</h1>
                 </a>
-                <p class="location">@ new york city</p>
+                <p class="location">@ shanghai</p>
             </div>
 
             <div class="cc">
